force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Printer_Color_2_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Printer_Color_2_Overage_Rate__c</fullName>
    <formula>IF( ISPICKVAL( TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__PrinterTotalCPCColorLineItem__c &gt; 0 ,
TSGCFG__PrinterSumofCPCOverageColor2__c / TSGCFG__PrinterTotalCPCColorLineItem__c,
IF( TSGCFG__PrinterTotalColor2Volume__c &lt;&gt;0, TSGCFG__PrinterTotalColor2OveragePrice__c / TSGCFG__PrinterTotalColor2Volume__c ,
If(TSGCFG__PrinterTotalCPCColorLineItem__c &gt; 0, TSGCFG__PrinterSumofCPCOverageColor2__c / TSGCFG__PrinterTotalCPCColorLineItem__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Printer Color 2 Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>