force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Printer_Total_BW_Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Printer_Total_BW_Monthly_Cost__c</fullName>
    <label>Printer Total B&amp;W Monthly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>