force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterBWCPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterBWCPC__c</fullName>
    <formula>IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__PrinterTotalCPCLineItem__c &gt; 0,
TSGCFG__PrinterSumofCPCBW__c / TSGCFG__PrinterTotalCPCLineItem__c ,
IF( ABS(TSGCFG__PrinterTotalMonoVolume__c - TSGCFG__PrinterTotalVolumeIncludesBW__c) &lt;&gt;0, TSGCFG__Printer_Total_BW_Monthly_Cost__c / ABS(TSGCFG__PrinterTotalMonoVolume__c - TSGCFG__PrinterTotalVolumeIncludesBW__c),
IF(TSGCFG__PrinterTotalCPCLineItem__c &gt; 0, TSGCFG__PrinterSumofCPCBW__c / TSGCFG__PrinterTotalCPCLineItem__c, 0)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Printer B&amp;W CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>