force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterBWOverageRate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterBWOverageRate__c</fullName>
    <formula>IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__PrinterTotalCPCLineItem__c &gt; 0 ,
TSGCFG__PrinterSumofCPCOverageBW__c / TSGCFG__PrinterTotalCPCLineItem__c,
IF( TSGCFG__PrinterTotalMonoVolume__c &lt;&gt; 0, TSGCFG__PrinterTotalBWOveragePrice__c / TSGCFG__PrinterTotalMonoVolume__c,
If(TSGCFG__PrinterTotalCPCLineItem__c &gt; 0, TSGCFG__PrinterSumofCPCOverageBW__c / TSGCFG__PrinterTotalCPCLineItem__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Printer B&amp;W Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>