force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterColorCPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterColorCPC__c</fullName>
    <formula>IF(ISPICKVAL( TSGCFG__Consolidation_Method__c , &apos;Average&apos;) &amp;&amp; TSGCFG__PrinterTotalCPCColorLineItem__c &gt; 0 ,
TSGCFG__PrinterSumofCPCColor__c / TSGCFG__PrinterTotalCPCColorLineItem__c,
IF( ABS( TSGCFG__PrinterTotalColorVolume__c -TSGCFG__PrinterTotalVolumeIncludesColor__c)&lt;&gt;0, TSGCFG__PrinterTotalColorMonthlyCost__c / ABS( TSGCFG__PrinterTotalColorVolume__c -TSGCFG__PrinterTotalVolumeIncludesColor__c),
IF( TSGCFG__PrinterTotalCPCColorLineItem__c &gt; 0, TSGCFG__PrinterSumofCPCColor__c / TSGCFG__PrinterTotalCPCColorLineItem__c, 0
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Printer Color CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>