force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterColorOverageRate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterColorOverageRate__c</fullName>
    <formula>IF( ISPICKVAL( TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__PrinterTotalCPCColorLineItem__c &gt; 0 ,
TSGCFG__PrinterSumofCPCOverageColor__c / TSGCFG__PrinterTotalCPCColorLineItem__c,
IF( TSGCFG__PrinterTotalColorVolume__c &lt;&gt;0, TSGCFG__PrinterTotalColorOveragePrice__c / TSGCFG__PrinterTotalColorVolume__c ,
If(TSGCFG__PrinterTotalCPCColorLineItem__c &gt; 0, TSGCFG__PrinterSumofCPCOverageColor__c / TSGCFG__PrinterTotalCPCColorLineItem__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Printer Color Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>