force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterMonthlyServicePayment__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterMonthlyServicePayment__c</fullName>
    <label>Printer Monthly Service Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>