force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterSumofCPCBW__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterSumofCPCBW__c</fullName>
    <label>Printer Sum of CPC B&amp;W</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>