force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterSumofCPCColor3__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterSumofCPCColor3__c</fullName>
    <label>Printer Sum of CPC Color 3</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>