force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterTotalBWOveragePrice__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterTotalBWOveragePrice__c</fullName>
    <label>Printer Total B&amp;W Overage Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>