force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterTotalColor1Volume__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterTotalColor1Volume__c</fullName>
    <label>Printer Total Color 1 Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>