force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterTotalColor2OveragePrice__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterTotalColor2OveragePrice__c</fullName>
    <label>Printer Total Color 2 Overage Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>