force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterTotalVolumeIncludesBW__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterTotalVolumeIncludesBW__c</fullName>
    <label>Printer Total Volume Includes (B/W)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>