force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterTotalVolumeIncludesColor1__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterTotalVolumeIncludesColor1__c</fullName>
    <label>Printer Total Volume Includes (Color) 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>