force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__PrinterTotalVolumeIncludesColor3__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__PrinterTotalVolumeIncludesColor3__c</fullName>
    <label>Printer Total Volume Includes (Color) 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>