force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Prod_B_W_CPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Prod_B_W_CPC__c</fullName>
    <description>Production only Black and White cost per copy calculated to offer a blended rate for multiple different values.</description>
    <formula>IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp;   TSGCFG__ProdTotalCPCLineItem__c   &gt; 0, 
  TSGCFG__ProdSumofCPCBW__c   /  TSGCFG__ProdTotalCPCLineItem__c , 
IF(  ABS(TSGCFG__ProdTotalMonoVolume__c - TSGCFG__Prod_Total_Volume_Includes_B_W__c)&lt;&gt;0,   TSGCFG__MonthlyMonoPayment__c   / ABS(TSGCFG__ProdTotalMonoVolume__c - TSGCFG__Prod_Total_Volume_Includes_B_W__c), 
IF(TSGCFG__ProdTotalCPCLineItem__c &gt; 0,  TSGCFG__ProdSumofCPCBW__c   / TSGCFG__ProdTotalCPCLineItem__c, 0) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Production only Black and White cost per copy calculated to offer a blended rate for multiple different values.</inlineHelpText>
    <label>Prod B&amp;W CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>