force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Prod_B_W_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Prod_B_W_Overage_Rate__c</fullName>
    <description>Production Calculated Overage Rate to allow for multiple services</description>
    <formula>IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp;  TSGCFG__ProdTotalCPCLineItem__c  &gt; 0 , 
  TSGCFG__ProdSumofCPCOverageBW__c   / TSGCFG__ProdTotalCPCLineItem__c, 
IF( TSGCFG__ProdTotalMonoVolume__c  &lt;&gt; 0,   TSGCFG__ProdTotalBWOveragePrice__c   / TSGCFG__ProdTotalMonoVolume__c, 
If(TSGCFG__ProdTotalCPCLineItem__c &gt; 0, TSGCFG__ProdSumofCPCOverageBW__c / TSGCFG__ProdTotalCPCLineItem__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Production B&amp;W CPC Overage rate</inlineHelpText>
    <label>Prod B&amp;W Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>