force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Prod_Color_2_CPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Prod_Color_2_CPC__c</fullName>
    <formula>IF(ISPICKVAL( TSGCFG__Consolidation_Method__c , &apos;Average&apos;) &amp;&amp; TSGCFG__ProdTotalCPCColorLineItem__c &gt; 0 ,
TSGCFG__ProdSumofCPCColor2__c / TSGCFG__ProdTotalCPCColorLineItem__c,
IF( ABS(TSGCFG__ProdTotalColor2Volume__c - TSGCFG__Prod_Total_Volume_Includes_Color_2__c)&lt;&gt;0, TSGCFG__ProdTotalColor2MonthlyCost__c /  ABS(TSGCFG__ProdTotalColor2Volume__c - TSGCFG__Prod_Total_Volume_Includes_Color_2__c),
IF( TSGCFG__ProdTotalCPCColorLineItem__c &gt; 0, TSGCFG__ProdSumofCPCColor2__c / TSGCFG__ProdTotalCPCColorLineItem__c, 0
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod Color 2 CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>