force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Prod_Color_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Prod_Color_Overage_Rate__c</fullName>
    <formula>IF( ISPICKVAL( TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp;   TSGCFG__ProdTotalCPCColorLineItem__c   &gt; 0 , 
  TSGCFG__ProdSumofCPCOverageColor__c  / TSGCFG__ProdTotalCPCColorLineItem__c, 
IF( TSGCFG__ProdTotalColorVolume__c &lt;&gt;0,   TSGCFG__ProdTotalColorOveragePrice__c   /  TSGCFG__ProdTotalColorVolume__c , 
If(TSGCFG__ProdTotalCPCColorLineItem__c &gt; 0, TSGCFG__ProdSumofCPCOverageColor__c / TSGCFG__ProdTotalCPCColorLineItem__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod Color Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>