force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Prod_Total_Volume_Includes_Color_1__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Prod_Total_Volume_Includes_Color_1__c</fullName>
    <description>Volume Includes (Color) 1 for Production</description>
    <inlineHelpText>Volume Includes (Color) 1 for Production</inlineHelpText>
    <label>Prod Total Volume Includes (Color) 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>