force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Prod_Total_Volume_Includes_Color_3__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Prod_Total_Volume_Includes_Color_3__c</fullName>
    <label>Prod Total Volume Includes (Color) 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>