force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__ProdMonthlyServicePayment__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__ProdMonthlyServicePayment__c</fullName>
    <description>=Sum(QLI.Total Monthly Payments) that are Production</description>
    <inlineHelpText>=Sum(QLI.Total Monthly Payments) that are Non-Production</inlineHelpText>
    <label>Prod.Monthly Service Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>