force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__ProdSumofCPCBW__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__ProdSumofCPCBW__c</fullName>
    <description>= SUM of Final CPC B/W and is Production</description>
    <inlineHelpText>= SUM of Final CPC B/W and is Production</inlineHelpText>
    <label>Prod Sum of CPC B&amp;W</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>