force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__ProdSumofCPCOverageBW__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__ProdSumofCPCOverageBW__c</fullName>
    <description>Sum of CPC Overage B/W - Production</description>
    <inlineHelpText>Sum of CPC Overage B/W - Production</inlineHelpText>
    <label>Prod Sum of CPC Overage B&amp;W</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>