force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__ProdSumofCPCOverageColor3__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__ProdSumofCPCOverageColor3__c</fullName>
    <label>Prod Sum of CPC Overage Color 3</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>